--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: "Comfortaa", sans-serif;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #8d99ae;
+  background-color: #17141a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -70,5 +69,11 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+@media (max-width: 768px) {
+  #root{
+    display: flex;
+    flex-direction: column;
   }
 }
