--- a/src/components/art/art.module.scss
+++ b/src/components/art/art.module.scss
@@ -1,28 +1,64 @@
-.parent{
+.parent {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     height: 100vh;
     overflow-y: hidden;
 }
+
+svg {
+    margin-block: auto;
+    margin-inline: 50px;
+    border-radius: 10px;
+
+}
+
 .link,
-.title{
+.title {
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
     font-size: 24px;
 
 }
-.title{
+
+.title {
     top: 15px;
-    font-family: "Comfortaa", sans-serif;
-  font-optical-sizing: auto;
-font-weight: 900;
+    font-optical-sizing: auto;
+    font-weight: 900;
 
 }
-.link{
+
+.link {
     font-family: "Tiny5", sans-serif;
     color: white;
-    transition: .3s ease-in-out;
+    transition: .2s ease-in-out;
     bottom: 30px;
+}
+
+.modal {
+    width: 50%;
+}
+
+@media (max-width: 768px) {
+    .parent {
+        height: auto;
+        flex-wrap: nowrap;
+        overflow-y: auto;
+        gap: 50px;
+        
+    }
+
+    .link,
+    .title {
+        margin-inline: auto;
+        display: block;
+        width: fit-content;
+        position: inherit;
+        transform: none;
+        margin-block: 25px;
+    }
+    .link{
+        order: 1;
+    }
 }
