--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -5,17 +5,20 @@
     height: 80vh;
     margin-block: auto;
     margin-inline: 50px;
+
     >img {
         width: 100%;
         height: 100%;
         object-fit: fill;
+    }
+    &:hover {
+        cursor: pointer;
     }
 
     >div {
         background-color: black;
         opacity: 30%;
         width: 97%;
-        height: 18%;
         position: absolute;
         left: 0;
         bottom: 0;
@@ -25,3 +28,9 @@
         justify-content: space-between;
     }
 }
+
+@media (max-width: 768px) {
+    .wrapper{
+        height: auto;
+    }
+  }
