--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -5,20 +5,29 @@
     height: 80vh;
     margin-block: auto;
     margin-inline: 50px;
+    transition: .3s ease-in-out;
 
     >img {
         width: 100%;
         height: 100%;
         object-fit: fill;
     }
+
     &:hover {
         cursor: pointer;
+        scale: 1.03;
+        box-shadow: 7px 7px 5px black;
+
+        >div {
+            opacity: 70%;
+        }
     }
 
     >div {
+        transition: .3s ease-in-out;
         background-color: black;
         opacity: 30%;
-        width: 97%;
+        width: 98%;
         position: absolute;
         left: 0;
         bottom: 0;
@@ -30,7 +39,16 @@
 }
 
 @media (max-width: 768px) {
-    .wrapper{
+    .wrapper {
         height: auto;
     }
-  }
+
+    .modd{
+        width: 90% !important;
+        overflow: auto;
+        height: 60%;
+        top: 50%;
+        inset: 15px 50% 5px 50%;
+
+    }
+}
