--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@
 
   color-scheme: light dark;
   color: #8d99ae;
-  background-color: #17141a;
-
+  background: linear-gradient(109.6deg, rgb(36, 45, 57) 11.2%, rgb(16, 37, 60) 51.2%, rgb(0, 0, 0) 98.6%);  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
